--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
+    <title>PalPaw</title>
     <link rel="stylesheet" href="./styles/index.css">
     <script src="https://kit.fontawesome.com/5e2fa57470.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="./src/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="container">
