--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="./styles/index.css">
     <script src="https://kit.fontawesome.com/5e2fa57470.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="./src/favicon.ico" type="image/x-icon">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-T4JV8Z7EP9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-T4JV8Z7EP9');
+</script>
 </head>
 <body>
     <div class="container">
